fix Bug 222297 Cannot toggle input checkbox via accesskey without taking focus off of input field first. r=aaronleventhal sr=dbaron patched by Nian Liu<neo.liu@sun.com>